remove duplication